# prunejuice

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  Makefile  README.md  backup-procedures.md  backup-validation.sh  cli-reference.md  database.dbml  external-dependencies-map.md  mkdocs.yml  phase4-pots-implementation-summary.md  purpose.md  pyproject.toml  refactor-from-guide.md  requirements-test.txt  rollback-to-worktree-manager.sh  system-inventory.md
backups/: current-branches.txt  current-config-output.txt  current-git-config.txt  current-worktrees.txt
backups/pre-plum-migration/: .gitignore  Makefile  api-refactor.md  dependency-map.md  guide.md  migration-checklist.md
backups/pre-plum-migration/scripts/: refactor-plan.md
docs/: index.md  modules.md
python-implementation/: IMPLEMENTATION_SUMMARY.md
python-implementation/prunejuice/: README.md  main.py  pyproject.toml
python-implementation/prunejuice/.prj/commands/: feature-branch.yaml
python-implementation/prunejuice/scripts/: install.sh
python-implementation/prunejuice/src/prunejuice/: __init__.py  cli.py  schema.sql
python-implementation/prunejuice/src/prunejuice/commands/: __init__.py  loader.py
python-implementation/prunejuice/src/prunejuice/core/: __init__.py  config.py  database.py  executor.py  models.py  state.py
python-implementation/prunejuice/src/prunejuice/integrations/: __init__.py  plum.py  pots.py
python-implementation/prunejuice/src/prunejuice/templates/: analyze-issue.yaml  code-review.yaml
python-implementation/prunejuice/src/prunejuice/utils/: __init__.py  artifacts.py  logging.py
python-implementation/prunejuice/tests/: conftest.py  test_cli.py  test_database.py  test_executor.py  test_integrations.py
scripts/: create-worktree-with-branch.sh  plum-cli.sh  prj  prunejuice-cli.sh  refactor-plan.md
scripts/plum/: plum  plum-config
scripts/plum/lib/: config.sh  files.sh  git-utils.sh  mcp.sh  ui.sh
scripts/pots/: README.md  pots  pots-config
scripts/pots/lib/: pots-ui.sh  session-utils.sh  worktree-sync.sh
scripts/pots/test/: manual-test.sh  run-tests.sh  test-pots-commands.bats  test-session-utils.bats  test-worktree-sync.bats
scripts/prunejuice/lib/: artifacts.sh  database.sh  executor.sh  prompt-assembly.sh  yaml-parser.sh
scripts/prunejuice/templates/: analyze-issue.yaml  base-command.yaml  code-review.yaml
scripts/worktree-manager/: README.md  worktree-config  worktree-create
scripts/worktree-manager/lib/: config.sh  files.sh
specs/: mcp-template-analysis.md  phase-4-pots-implementation.md  phase-5-implementation-plan.md  phase1-backup-strategy-implementation-plan.md  phase1-backup-strategy-implementation-summary.md  phase1-impact-analysis-implementation-plan.md  phase1-system-inventory-implementation-plan.md  phase1-system-inventory-implementation-summary.md  phase3-core-framework-development-implementation-summary.md  prunejuice-in-python-plan.md
src/prunejuice/: __main__.py  cli.py
src/prunejuice/core/: git_ops.py  (+3 more)
tests/: conftest.py  test_cli.py  test_database.py  test_foo.py  test_git_ops.py  test_operations.py
tests/integration/: test_tmux_real_operations.py
tests/unit/: test_tmux_manager_check.py  test_tmux_manager_commands.py  test_tmux_manager_detached.py  test_tmux_manager_format.py  test_tmux_manager_init.py  test_tmux_manager_sessions.py
(+10 files in other folders)
